[gd_scene load_steps=8 format=3 uid="uid://qb4vjn0tofx7"]

[ext_resource type="Script" path="res://scene/game/game.gd" id="1_wjo58"]
[ext_resource type="Texture2D" uid="uid://0q4tiltapp43" path="res://scene/game/asset/flipped_card.png" id="2_xbiaj"]
[ext_resource type="Texture2D" uid="uid://0w70nv3ljl4r" path="res://scene/game/asset/red.png" id="3_tifr0"]
[ext_resource type="Texture2D" uid="uid://d3308ffxef6eo" path="res://scene/game/asset/green.png" id="4_ap70y"]
[ext_resource type="Texture2D" uid="uid://dfqmqgrepd8b5" path="res://scene/game/asset/blue.png" id="5_lgyfq"]
[ext_resource type="Texture2D" uid="uid://bocc2qyy4avnx" path="res://scene/game/asset/yellow.png" id="6_qobc7"]
[ext_resource type="Texture2D" uid="uid://dhyotnwnwely3" path="res://scene/game/asset/turn_pointer.svg" id="7_xeu8m"]

[node name="Game" type="Node2D"]
script = ExtResource("1_wjo58")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.54902, 0.54902, 0.54902, 1)
metadata/_edit_lock_ = true

[node name="DrawButton" type="TextureButton" parent="."]
offset_left = 970.0
offset_top = 460.0
offset_right = 1070.0
offset_bottom = 620.0
texture_normal = ExtResource("2_xbiaj")

[node name="WildButtonGroup" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 900.0
offset_top = 700.0
offset_right = 1020.0
offset_bottom = 820.0
metadata/_edit_lock_ = true

[node name="RedButton" type="TextureButton" parent="WildButtonGroup"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
texture_normal = ExtResource("3_tifr0")

[node name="GreenButton" type="TextureButton" parent="WildButtonGroup"]
layout_mode = 0
offset_left = 60.0
offset_right = 110.0
offset_bottom = 50.0
texture_normal = ExtResource("4_ap70y")

[node name="BlueButton" type="TextureButton" parent="WildButtonGroup"]
layout_mode = 0
offset_top = 60.0
offset_right = 50.0
offset_bottom = 110.0
texture_normal = ExtResource("5_lgyfq")

[node name="YellowButton" type="TextureButton" parent="WildButtonGroup"]
layout_mode = 0
offset_left = 60.0
offset_top = 60.0
offset_right = 110.0
offset_bottom = 110.0
texture_normal = ExtResource("6_qobc7")

[node name="TurnPointer" type="Sprite2D" parent="."]
position = Vector2(960, 340)
texture = ExtResource("7_xeu8m")

[connection signal="pressed" from="DrawButton" to="." method="_on_draw_button_pressed"]
[connection signal="pressed" from="WildButtonGroup/RedButton" to="." method="_on_color_button_pressed" binds= ["R"]]
[connection signal="pressed" from="WildButtonGroup/GreenButton" to="." method="_on_color_button_pressed" binds= ["G"]]
[connection signal="pressed" from="WildButtonGroup/BlueButton" to="." method="_on_color_button_pressed" binds= ["B"]]
[connection signal="pressed" from="WildButtonGroup/YellowButton" to="." method="_on_color_button_pressed" binds= ["Y"]]
